--- a/experiments.tex
+++ b/experiments.tex
@@ -10,16 +10,34 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two types of problems, and demonstrate how they can be solved using our approach.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach.
 
-\subsection{Individual reach-avoid problem}
+\subsection{Local reach-avoid problems for each robot}
+\label{sec:local reach-avoid}
 
-We first consider situations when the robots have got their individual reachability objective, and they need to ensure a minimum safe distance from each other and the obstacles.
-We show how this case can be captured using the problem description outlined in Sec.~\ref{}.
-Suppose $\set{\Sigma^i}$ be a set of control systems, $\tau>$ be the given sampling time, $\goal^i\subseteq X^i$ be the individual goal states, $\avoid\subseteq $
-\todo{To finish...}
+We first consider situations when the robots have got their individual reachability specifications, and they need to ensure a minimum safe distance from each other and the obstacles.
+We show how this case can be captured using the problem description outlined in Sec.~\ref{sec:problem}.
 
-In this category, we consider the following three examples.
+Suppose $\set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)}$ is a set of control systems, $\tau>$ is the given sampling time, $\goal^i\subseteq X^i$ is the individual goal states, $\avoid\subseteq Y$ is a common obstacle in the output space, and $\delta \in \mathbb{R}^p_{>0}$ is a safety margin.
+(We could also consider obstacles in the robots' own state spaces, in which case we had to additionally introduce safety margins in the state spaces.)
+Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\avoid$ and collision with robots by the margin $\delta$.
+This specification can be expressed as a reach-avoid specification of the product system $\Sigma^\times$, as per the required form given in Sec.~\ref{sec:problem}, as follows:
+\begin{itemize}
+	\item The goal set $\goal\subseteq X$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X$, and
+	\item The static obstacle $\obs\subseteq X$ is defined as 
+		\begin{align}
+			&\obs \coloneqq\\ 
+				&\Set{ x\in X | 
+					\begin{array}{c}
+						\exists i\in [1;N]\;.\; d^{p}(h^i(\proj^i(x)),\obs) \leq \delta\\
+						\wedge\\
+						 \exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta
+					\end{array}}.
+		\end{align}
+\end{itemize}
+Once the sets $\goal$ and $\obs$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
+
+In this category of problems, we consider the following three examples.
 
 %\textcolor{red}{
 \subsubsection{Multi-drone path planning}\label{sec:Multirobot}
@@ -256,9 +274,40 @@ For collision and obstacle avoidance, we choose \MS{$\delta=\begin{bmatrix}??&??
 \end{figure}
 
 
-\subsection{Formation control problem}
+\subsection{Global formation control problem}
 
-\todo{Add the example when it's ready.}
+The second category of example, that we are about to present, is about maintaining a global formation while satisfying a set of reach-avoid specifications.
+We show how the formation control problem can be expressed using a static obstacle $\avoid$ on the product state space $X^\times$, as required by the problem setup in Sec.~\ref{sec:problem}.
+
+Let us first formalize the notion of formation.
+Let $\Set{\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)}$ be a set of robots.
+A \emph{formation constraint} is a set $\Set{\lambda^{i,j}\in \mathbb{R}^p}_{i,j\in [1;N]}$ with the restriction $\lambda^{i,j}=-\lambda^{j,i}$, where the ``$-$'' is performed element-wise on $\lambda^{j,i}$, and where every $\lambda^{i,j}$ specifies the relative (signed) distance between the robot $\Sigma^i$ and the robot $\Sigma^j$.
+
+Now suppose $\goal^i\subseteq X^i$ is the individual goal states, $\avoid\subseteq Y$ is a common obstacle in the output space, $\delta \in \mathbb{R}^p_{>0}$ is a safety margin, and $\mu\in \mathbb{R}^p_{>0}$ is a tolerance margin for the formation constraint.
+The formation control problem then asks to generate controllers $\set{C_i}$ such that every robot $\Sigma^i$ eventually reaches $\goal^i$ while avoiding $\avoid$ and inter-robot collision by the margin $\delta$, as well as while making sure that the distance between robot $\Sigma^i$ and $\Sigma^j$ is in the range $\lambda^{i,j} \pm \mu$.
+Essentially the tolerance margin $\mu$ is to account for the possible slight deviations due to disturbances experienced by the robots; in other words, $\mu$ will dictate the choice of $\varepsilon$ in Step~\ref{step:abcd} of Alg.~\ref{alg:main}.
+Notice that since the robots have their own goals, and at the same time they need to ``stay close'' to their neighboring robots in the formation for the entire period, hence they might first need to accompany the other robots to their goals, before being accompanied by them to reach its own goal.
+
+We can express the formation control problem in the product state space as follows:
+\begin{itemize}
+	\item The goal set $\goal\subseteq X$ is defined as $\goal \coloneqq \goal^1\times \ldots \times \goal^N \subseteq X$, and
+	\item The static obstacle $\obs\subseteq X$ is defined as 
+		\begin{align}
+			&\obs \coloneqq\\ 
+				&\Set{ x\in X | 
+					\begin{array}{c}
+						\exists i\in [1;N]\;.\; d^{p}(h^i(\proj^i(x)),\obs) \leq \delta\\
+						\wedge\\
+						 \exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta\\
+						 \wedge\\
+						  {\color{blue}\exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)=\lambda^{i,j}}
+					\end{array}},
+		\end{align}
+\end{itemize}
+where the last conjunction (highlighted in blue) in the definition of $\obs$ is the restriction required for maintaining the formation, and the rest are same as in Sec.~\ref{sec:local reach-avoid}.
+Once the sets $\goal$ and $\obs$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
+
+\todo{The example goes here...}
 
 %\section{Present Challenges}
 %
