--- a/experiments.tex
+++ b/experiments.tex
@@ -300,7 +300,7 @@ We can express the formation control problem in the product state space as follo
 						\wedge\\
 						 \exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\leq\delta\\
 						 \wedge\\
-						  {\color{blue}\exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\neq\lambda^{i,j}}
+						  {\color{blue}\exists (i,j)\in [1;N]\times [1;N]\;.\; d^{p}\left(h^i(\proj^i(x)),h^j(\proj^j(x))\right)\notin\lambda^{i,j}\pm \mu}
 					\end{array}},
 		\end{align}
 \end{itemize}
