--- a/prelims.tex
+++ b/prelims.tex
@@ -14,7 +14,7 @@ We define the product function $f\oplus g\colon A\times C\to B\times D $, $f\opl
 The product function can be defined for arbitrarily many functions by extending the definition in the obvious way.
 
 Throughout, we measure distance between two points, within a space $\mathbb{R}^n$, using the \emph{element-wise distance metric} $d^n\colon \mathbb{R}^n\times \mathbb{R}^n\to \mathbb{R}^n$, $d^n\colon \left((u_1,\ldots, u_n),(v_1,\ldots,v_n)\right)\mapsto \left(|u_1-v_1|,\ldots,|u_n-v_n|\right)$. 
-We extend the definition of $d^n$ to measure distance between a point and a set: for any given $u\in \mathbb{R}^n$ and $V\in \mathbb{R}^n$, $d^n(u,V) \coloneqq \left( \inf_{v\in V}|u_1,v_1|,\ldots, \inf_{v\in V}|u_n-v_n| \right)$.
+We extend the definition of $d^n$ to measure distance between a point and a set: for any given $u\in \mathbb{R}^n$ and $V\in \mathbb{R}^n$, $d^n(u,V) \coloneqq \left( \inf_{v\in V}|u_1-v_1|,\ldots, \inf_{v\in V}|u_n-v_n| \right)$.
 Given a point $c\in \mathbb{R}^n$ and given the parameter $\epsilon\in \mathbb{R}_{>0}^{n}$, we use the notation $\ball_\epsilon( x)$ to denote the ball in $\mathbb{R}^n$, centered around $c$ and having radius $\epsilon$.
 Formally, \[\ball_\varepsilon(c)\coloneqq \set{x
 	\in \mathbb{R}^n \mid  d^n(x,c)\leq \varepsilon }.\] 
