related work section

--- a/intro.tex
+++ b/intro.tex
@@ -45,5 +45,5 @@ So in the bottom layer, we use ABCD to synthesize formally verified \emph{tracki
 
 Our primary contribution is the extension of ABCD to tracking objectives.
 This enables the use of ABCD in the hierarchical design principle, which found success in many other design contexts \cite{murray,schmidt hierarchical DES, sayan mitra}.
-\todo{Need to discuss.}
 
+\subsection{Motivating Example}
