--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{alonso2019distributed,
+  title={Distributed multi-robot formation control in dynamic environments},
+  author={Alonso-Mora, Javier and Montijano, Eduardo and N{\"a}geli, Tobias and Hilliges, Otmar and Schwager, Mac and Rus, Daniela},
+  journal={Autonomous Robots},
+  volume={43},
+  number={5},
+  pages={1079--1100},
+  year={2019},
+  publisher={Springer}
+}
+
 @book{baier2008principles,
   title={Principles of model checking},
   author={Baier, Christel and Katoen, Joost-Pieter},
