--- a/related_work.tex
+++ b/related_work.tex
@@ -1,19 +1,59 @@
 \subsection{Related Work}
 
-\KM{The plan is to collect all the papers first in the following list. After that, I will make a story out of them.}
-Here are the papers that we know of:
-\begin{enumerate}
-	\item FastTrack: Guaranteed tracking of nonlinear trajectories for nonlinear systems under disturbances \cite{herbert2017fastrack}. \MS{They only account for the error between the planning and tracking models and not for additive disturbance applied to the tracking model. They also rely on possibility of relating the two afformentioned models by a linear mapping (which is not the case for the general class of systems). Finally, while their method scales up better than (pure) SCOTS, it does not scale up to dimensions above ten.}
-	\item Safe control for multi-vehicle system under presence of disturbances \cite{bansal2017safe}. In contrast to our method, they assume a fixed priority order of the vehicles: The higher priority vehicles make independent plans, which are treated as (time-varying) obstacles for the lower priority vehicles. 
-	\new{One way our method is probably more powerful is if we consider controller synthesis for mechanically coupled systems with joint goal, or even formation control problem for mechanically decoupled systems. For these class of problems, I don't think their method will directly apply, whereas ours should work fine.}
-	\item Using the tracking error in the planning phase to make sure that the controller will be safe \cite{fan2020fast}. Relies on an expert user to already provide the low-level tracking controller, whereas we synthesize the tracking controller. So they address the inverse problem in some sense.
-	\item Another paper of the same flavor as the previous one \cite{fan2018controller}. Here they restrict themselves to discrete time perturbed linear systems.
-	\item Sum-of-squares based tracking methods \cite{tedrake2010lqr, singh2018robust}. Do not consider external disturbances.
-	\item Other hierarchical methods using planning+tracking like approach for formal methods-based synthesis for single systems \cite{wongpiromsarn2012receding, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773}.
-	\item Hierarchical control for interconnected discrete event systems \cite{wong1996hierarchical,schmidt2008nonblocking}.
-	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying a given LTL specification in the absence of noise and then design a regulating controller to account for the noise term.
-	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agents modeled not as planar robots.
-	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
-	\item Controlling multi-robot (it can be heterogeneous) using ALTRO \cite{jackson2020scalable}. very similar to our work without formal guarantee but works in real-time. they are making centralized system by combining dynamics of several quads. 
-	\item The paper that we got merging example from that\cite{xiao2019merging}. They are using optimal control + control barrier function. they are can handle disturbance and in addition they are optimizing time and fuel consummation and more constraints but they are considering linear model.
+We categorize the related work into (1) the ones which propose hierarchical controller synthesis techniques, (2) the ones which address the problem of multi-robot controller synthesis, and (3) the ones which combine (1) and (2) like us.
+
+\begin{enumerate}[(1)]
+	\item The hierarchical approach, combining high-level planning and low-level tracking, is not new.
+	Yet most of the existing works use the hierarchical approach for controller synthesis for a single robot \cite{herbert2017fastrack, fan2020fast, fan2018controller, wongpiromsarn2012receding, tedrake2010lqr, singh2018robust, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773, Yang2017milp}.
+	In contrast, we consider a hierarchical control for decentralized control of a group of robots.
+%	For example, there are methods which can generate nominal controlled trajectories by taking into account the maximum tracking error, assuming that a tracking controller is already in place \cite{fan2020fast, fan2018controller}.
+%	On the other hand, there are methods which compute a tracking controller which minimizes the tracking error for any given nominal trajectory:
+%	Some of them do not consider external disturbances \cite{tedrake2010lqr, singh2018robust}, some of them only consider linear dynamics \cite{wongpiromsarn2012receding}, and all of them consider only a single monolithic system structure \cite{herbert2017fastrack}.
+	\item There are many papers which address the problem of multi-robot controller synthesis, which do not use a hierarchical approach as we do.
+	Chen et al.\ proposed a method, using control barrier functions, that requires some form of inter-robot communication and does not consider external disturbances \cite{Chen2018cbf}.
+	Sahin et al.\ proposed a method that requires the group of robots to be homogeneous \cite{Shahin2017cltl}.
+	There are methods which do not consider external disturbances and do not provide formal guarantees \cite{jackson2020scalable}.
+	In contrast, our method can synthesize formally verified controllers for heterogeneous group of robots, subjected to external disturbances, and lacking any form of communications.
+	The closest related work that match our level of generality is the one by Bansal et al.\ \cite{bansal2017safe}.
+	However, they assume that each robot has got its own reach-avoid specification and they need to avoid collision with the other robots.
+	Whereas, we allow global reach-avoid specifications, which subsumes the specifications that they consider.
+	In fact, there are control problems which cannot be easily expressed in their problem setting, but can be easily expressed in our problem setting: 
+	examples are robots maintaining a formation while fulfilling their tasks \cite{alonso2019distributed}, etc.
+	\item  The works which use hierarchical controller synthesis approach for decentralized control of multi-robot systems is relatively rare.
+	Alonso-Mora et al.\ proposed a method for formation control of a group of communicating homogeneous robots \cite{alonso2019distributed}.
+	They first synthesize nominal controller using a fast randomized geometric planning method, namely RRT, and then use optimal control to track the obtained nominal solution.
+	Unlike us, neither they consider external disturbances, nor they provide formal guarantees.
+	Recently, Xiao et al.\ \cite{xiao2019merging} proposed a method for synthesis of distributed controllers for a set of autonomous vehicles in a lane merging situation.
+	They use optimal control to compute a nominal controller for the product system, whose goal is to ensure some safety constraints together with ensuring optimality in some respect (like fuel consumption).
+	After that, they use control barrier functions for each robot for tracking the obtained nominal solution.
+	Even though they consider external noise in the system, yet, when there is noise, their controllers can occasionally violate the safety constraints for finite number of time steps.
+	Moreover, they only consider only simple linear systems (double integrators) as vehicle models.
+	In contrast, our method provides guarantee against worst-case system noise at all time, and in addition can support nonlinear systems. 
 \end{enumerate}
+ 
+
+%\begin{enumerate}
+%	\item FastTrack: Guaranteed tracking of nonlinear trajectories for nonlinear systems under disturbances \cite{herbert2017fastrack}. \MS{They only account for the error between the planning and tracking models and not for additive disturbance applied to the tracking model. They also rely on possibility of relating the two afformentioned models by a linear mapping (which is not the case for the general class of systems). Finally, while their method scales up better than (pure) SCOTS, it does not scale up to dimensions above ten.}
+%%	\item Using the tracking error in the planning phase to make sure that the controller will be safe \cite{fan2020fast}. Relies on an expert user to already provide the low-level tracking controller, whereas we synthesize the tracking controller. So they address the inverse problem in some sense.
+%%	\item Another paper of the same flavor as the previous one \cite{fan2018controller}. Here they restrict themselves to discrete time perturbed linear systems.
+%%	\item Sum-of-squares based tracking methods \cite{tedrake2010lqr, singh2018robust}. Do not consider external disturbances.
+%	\item Other hierarchical methods using planning+tracking like approach for formal methods-based synthesis for single systems \cite{wongpiromsarn2012receding, DBLP:journals/tac/MeyerD19, DBLP:journals/corr/abs-1911-09773}.
+%	
+%	\item A robust scheme for controlling linear dynamical systems with additive bounded noise and (general) LTL specification \cite{Yang2017milp}. They use mixed integer linear programming (MILP) to design a nominal controller satisfying a given LTL specification in the absence of noise and then design a regulating controller to account for the noise term.
+%\end{enumerate}
+
+%\smallskip
+%\noindent\textbf{Ones which address multi-robot control problems.}\
+%
+%\KM{The plan is to collect all the papers first in the following list. After that, I will make a story out of them.}
+%Here are the papers that we know of:
+%\begin{enumerate}
+%	\item Safe control for multi-vehicle system under presence of disturbances \cite{bansal2017safe}. In contrast to our method, they assume a fixed priority order of the vehicles: The higher priority vehicles make independent plans, which are treated as (time-varying) obstacles for the lower priority vehicles. 
+%	\new{One way our method is probably more powerful is if we consider controller synthesis for mechanically coupled systems with joint goal, or even formation control problem for mechanically decoupled systems. For these class of problems, I don't think their method will directly apply, whereas ours should work fine.}
+%	
+%	\item A method to control a robot swarm (modelled as planar robots with potentially different speed bounds) such that a given specification (expressable in a fragment of LTL) is satisfied \cite{Chen2018cbf}. Some extent of communication between robots is required. The collision avoidance is guaranteed via designing control barrier functions for each pair of robots. No source of disturbance is considered in the model and the proposed solution does not work for agents modeled not as planar robots.
+%	\item Controlling (homogeneous) robot swarms (modelled as finite state transition systems) for satisfying specifications expressed in a temporal logic for reasoning about the collective behavior of multiple agents (cLTL) \cite{Shahin2017cltl}. Their method can potantially account for bounded noise and non-linearities, but not heterogeneity.
+%	\item Controlling multi-robot (it can be heterogeneous) using ALTRO \cite{jackson2020scalable}. very similar to our work without formal guarantee but works in real-time. they are making centralized system by combining dynamics of several quads. 
+%	\item The paper that we got merging example from that\cite{xiao2019merging}. They are using optimal control + control barrier function. they are can handle disturbance and in addition they are optimizing time and fuel consummation and more constraints but they are considering linear model.
+%	\item Hierarchical control for interconnected discrete event systems \cite{wong1996hierarchical,schmidt2008nonblocking}.
+%\end{enumerate}
