--- a/experiments.tex
+++ b/experiments.tex
@@ -10,7 +10,40 @@ The formal controller synthesis has been performed
 on a cluster with 4 Intel Xeon E7-8857 v2 CPUs (48 cores in total) at 3GHz, with 1.5TB of
 RAM. %\MS{TODO: adding a table with complete information regarding sizes and times for all of the examples}
 
-We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:ipd} demonstrates the runtimes of different stages for each of the experiment.
+We consider two distinct types of problems, and demonstrate how they can be solved using our approach. Table~\ref{tab:runtimes} demonstrates the runtimes of different stages for each of the experiment.
+
+\begin{table*}
+	\centering
+	\caption{List of runtimes for different case-studies
+		\textmd{Runtimes (in seconds) for computing nominal controller over the product space using ALTRO ($T_{AL}$), (total) abstraction and synthesis times for computing local controllers for all of the robots using SCOTS ($T_{SC}^{abs}$ and $T_{SC}^{syn}$, respectively).}
+	}
+	\label{tab:runtimes}
+	\renewcommand{\arraystretch}{1.2}
+	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
+	\resizebox{1\columnwidth}{!}{
+		\begin{tabular}{l|c|rr}
+			\toprule
+			&\multicolumn{1}{c}{central synthesis}&
+			\multicolumn{2}{|c}{local synthesis}\\
+			
+			case-studies&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
+			\midrule
+			
+			\multirow{1}{*}{\rotatebox{0}{multi-car}} & $125$ & $578$  & $68$ \\
+			
+			\midrule
+			
+			\multirow{1}{*}{\rotatebox{0}{crane and forklift}} & $0.65$ & $512.1$  & $91.16$\\
+			
+			\midrule
+			
+			\multirow{1}{*}{\rotatebox{0}{lane merging}} & $100$ & $195$  & $38.5$\\
+			\midrule
+			\multirow{1}{*}{\rotatebox{0}{formation control}} & $163$ & $570$  & $140$\\
+			\bottomrule
+	\end{tabular}}
+\end{table*}
+
 
 \subsection{Local reach-avoid problems for each robot}
 \label{sec:local reach-avoid}
@@ -41,7 +74,7 @@ In this category of problems, we consider the following three examples.
 
 %\textcolor{red}{
 \subsubsection{Multi-drone path planning}\label{sec:Multirobot}
-In this example, we consider a planning scenario for ten identical drones ($N=10$). A set of initial and target states for each drone are specified and depicted in Fig.~\ref{fig:MA}. The drones must avoid hitting a physical obstacle that is depicted with green circle in Fig.~\ref{fig:MA}. %A physical obstacle is added to the problem over the $2D$ plane, depicted in Figure~\ref{fig:MA} with a yellow circle. 
+In this example, we consider a planning scenario for ten identical drones ($N=10$). A set of initial and target states for each drone are specified and depicted in Fig.~\ref{fig:MA}. The drones must avoid hitting a physical obstacle that is depicted with green square in Fig.~\ref{fig:MA}. %A physical obstacle is added to the problem over the $2D$ plane, depicted in Figure~\ref{fig:MA} with a yellow circle. 
 The threshold for minimum distance from the static obstacle and other drones is chosen to be $\delta=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$. %and $\delta_{obs}=\begin{bmatrix}2&2\end{bmatrix}^T$.
 The control objective is to synthesize a controller for each drone so that in the presence of additive bounded disturbance, beginning from the specified initial state, the corresponding target state is reached within a finite horizon, while avoiding collision with other drones and the static obstacle at every time point. 
 
@@ -138,7 +171,7 @@ By allowing disturbance to take non-zero values, there is no guarantee that the 
 %\textcolor{red}{
 \subsubsection{Crane and Forklift}
 \label{subsec}
-The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
+The goal of this example is to study performance of our method for controlling a number of robots with different dynamics. Consider a production line wherein a crane (modeled as a cart-pole system) puts some items at certain points and a forklift is in charge of picking these items up. It is assumed that at its lowest height the crane's hook is positioned such that the forklift cannot pass. In particular, Fig.~\ref{fig:cr_and_lft_2} shows a scenario wherein the crane (initially positioned toward left of the boom) needs to unload at the other end of the boom. At the same time, the forklift (initially positioned near the right end of the boom) needs to pick some item locating near the left end of the boom. The goal is to control both the crane and the forklift so that the forklift reaches the object without colliding with the crane. 
 
 We model the crane and forklift by tuples $\Sigma^1=(X^1,U^1,x_\init^1,W^1,f^c,Y^1,h^c)$ and $\Sigma^2=(X^2,U^2,x_\init^2,W^2,f^l,Y^2,h^l)$, respectively. The crane is modeled as cart-pole system with the dynamical model taken from \cite{Barto1983}:
 \begin{align*}
@@ -199,7 +232,7 @@ h^l=\begin{bmatrix}
 where, $y_2>0$ is a constant that denotes the height of the forklift's head with respect to the ground.
 
 %As promised, we use ALTRO in the first step to generate a valid trajectory for the case that $W=\{0\}$. 
-There is no static obstacle defined for this example and for minimum distance between the crane and the forklift we choose $\delta=\begin{bmatrix}0.035&0.035\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $K=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft} demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and forklift in the middle of the mission.
+There is no static obstacle defined for this example and for minimum distance between the crane and the forklift we choose $\delta=\begin{bmatrix}0.035&0.035\end{bmatrix}^T$. The sampling time and the horizon length are fixed to $\tau=0.1$ and $K=70$, respectively. Given these settings, ALTRO was capable of generating a valid nominal trajectory in $0.65$ seconds. Fig.~\ref{fig:cr_and_lft} (\textbf{left}) demonstrates snapshots of the produced trajectory. Surprisingly enough, applying (constant) additive disturbance $W=\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ (to the cart-pole system) causes collision between the crane and forklift before the end of the mission Fig.~\ref{fig:cr_and_lft} (\textbf{right}).
 
 In the next step, we use SCOTS in order to compute a feedback controller tolerating additive disturbance $|W^1|\leq\begin{bmatrix}0&0.02&0&0\end{bmatrix}^T$ for the crane and $|W^2|\leq\begin{bmatrix}0&0.1\end{bmatrix}^T$ for the forklift. %We note that the selection of tube sizes need to satisfy the following inequality:
 %\[ \delta_{col}> \varepsilon_{1}^{(1)} + l\times\varepsilon_{3}^{(1)} + \varepsilon_{1}^{(2)},\]
@@ -209,9 +242,9 @@ Next, we choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0
 			
 \begin{figure}[t]
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/crane_and_lifter.png}
+	\includegraphics[width=0.45\textwidth]{figures/crane_and_forklifter.pdf}
 	\caption{Illustration of the reference trajectories produced by ALTRO for the crane and forklift example}
-\end{figure}\label{fig:cr_and_lft}
+\end{figure}\label{fig:cr_and_lft_2}
 
 
 %In this example, we show the method can handle multiple heterogeneous dynamical systems. This example is Modelling a special situation in a factory(shown in fig \ref{fig:cr_and_lft}) . Assume there is a crane and and a forklift. Each one of them should reach their destination without having any accident(satisfying specs). The Crane position will change from 0 to 5 and the forklift from 9 to 4.  Here we model the forklift using $\begin{bmatrix} \dot{x_1}\\ \dot{x_2} \end{bmatrix}=\begin{bmatrix} x_2\\ u \end{bmatrix}$ ($x_1$ and $x_2$ are representing position and velocity) and for the crane we use inverted pendulum model with exactly same configuration in \cite{barto1983neuronlike}: \\ 
@@ -279,11 +312,9 @@ For collision and obstacle avoidance, we choose $\delta=\begin{bmatrix}0.37&0.37
 
 \begin{figure}
 	\caption{Illustration of the reference trajectories produced by ALTRO for the lane merging example}
-	\label{fig:merge}
 	\centering
 	\includegraphics[width=0.45\textwidth,height=0.5\textheight]{figures/merge2.png}
-
-\end{figure}
+\end{figure}\label{fig:merge}
 
 
 \subsection{Global formation control problem}
@@ -357,34 +388,3 @@ Computing the transition system over inter-tube space with width $\varepsilon=\b
 
 
 
-\begin{table*}
-	\centering
-	\caption{List of runtimes for different case-studies
-	\textmd{Runtimes (in seconds) for computing nominal controller over the product space using ALTRO ($T_{AL}$), (total) abstraction and synthesis times for computing local controllers for all of the robots using SCOTS ($T_{SC}^{abs}$ and $T_{SC}^{syn}$, respectively).}
-	}
-	\label{tab:ipd}
-	\renewcommand{\arraystretch}{1.2}
-	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
-	\resizebox{1\columnwidth}{!}{
-		\begin{tabular}{l|c|rr}
-			\toprule
-			&\multicolumn{1}{c}{central synthesis}&
-			\multicolumn{2}{|c}{local synthesis}\\
-			
-			case-studies&$T_{AL}$&$T_{SC}^{abs}$&$T_{SC}^{syn}$\\
-			\midrule
-			
-			\multirow{1}{*}{\rotatebox{0}{multi-car}} & $125$ & $578$  & $68$ \\
-			
-			\midrule
-			
-			\multirow{1}{*}{\rotatebox{0}{crane and forklift}} & $0.65$ & $512.1$  & $91.16$\\
-			
-			\midrule
-			
-			\multirow{1}{*}{\rotatebox{0}{lane merging}} & $100$ & $195$  & $38.5$\\
-			\midrule
-			\multirow{1}{*}{\rotatebox{0}{formation control}} & $163$ & $570$  & $140$\\
-			\bottomrule
-	\end{tabular}}
-\end{table*}
